button color issue on iphone

--- a/Sites/style.css
+++ b/Sites/style.css
@@ -30,4 +30,5 @@ p {
 button {
 	padding: 10px;
 	border-radius: 8px;
+	background-color: silver;
 }
